--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-08-16  Ankit Patel <ankit@redhat.com>
 
 	* gu.po: Updated Final Gujarati Translation.
