--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,13 @@
 2004-08-16  Alexander Larsson  <alexl@redhat.com>
 
+	* configure.in:
+	Bump version to 2.7.4 (to sync with eel)
+
+	* NEWS:
+	Update
+
+2004-08-16  Alexander Larsson  <alexl@redhat.com>
+
 	* libnautilus-private/nautilus-file.c (nautilus_file_is_mime_type):
 	Compare types using gnome_vfs_mime_type_is_equal to catch aliases.
 	Fixes bug #147811
