--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,10 @@
-This is nautilus 2.7.2, the file manager for the Gnome 2 desktop.
+This is nautilus 2.7.4, the file manager for the Gnome 2 desktop.
+
+Major changes since 2.7.2 are:
+
+* Fix remaining time reporting in progress dialog
+* Nicer connect to server dialog
+* Various bugfixes and memleak fixes
 
 Major changes since 2.7.1 are:
 
