Post release version bump (to 2.7.92)
2004-08-16  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Post release version bump (to 2.7.92)

=== nautilus 2.7.4 ===

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,13 @@
 2004-08-16  Alexander Larsson  <alexl@redhat.com>
 
 	* configure.in:
+	Post release version bump (to 2.7.92)
+
+=== nautilus 2.7.4 ===
+
+2004-08-16  Alexander Larsson  <alexl@redhat.com>
+
+	* configure.in:
 	Bump version to 2.7.4 (to sync with eel)
 
 	* NEWS:
