--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
+
+	* es.po: Updated Spanish translation.
+
 === nautilus 2.7.4 ===
 
 2004-08-16  Artur Flinta  <aflinta@cvs.gnome.org>
