--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-17  Metin Amiroff  <metin@karegen.com>
+
+	* az.po: Translation updated.
+
 2004-08-16  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
