--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Add this.
+
 2004-08-17  Metin Amiroff  <metin@karegen.com>
 
 	* az.po: Translation updated.
