Added "bs" to ALL_LINGUAS. Added Bosnian translation by Kenan Hadžiavdić
2004-08-16  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "bs" to ALL_LINGUAS.
	* po/bs.po: Added Bosnian translation by
	Kenan Hadžiavdić <kenan@bgnett.no>.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Christian Rose  <menthos@menthos.com>
+
+	* bs.po: Added Bosnian translation by
+	Kenan Hadžiavdić <kenan@bgnett.no>.
+
 2004-08-16  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Add this.
