--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Alexander Larsson  <alexl@redhat.com>
+
+	* src/file-manager/fm-directory-view.c (fm_directory_view_launch_application):
+	Don't add recent files for non-gnome-vfs uris (such as x-nautilus-desktop://)
+
 2004-08-16  Christian Rose  <menthos@menthos.com>
 
 	* configure.in: Added "bs" to ALL_LINGUAS.
