ankit@redhat.com 17/08/2004 * gu.po : Updated Final Gujarati Translation

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-17  Ankit Patel <ankit@redhat.com>
+
+	* gu.po: Updated Final Gujarati Translation.
+
 2004-08-17  Christian Rose  <menthos@menthos.com>
 
 	* sv.po: Updated Swedish translation.
