Stop cell editing mode when changing directories. Fixes bug #143830.
2004-08-19  Martin Wehner  <martin.wehner@epost.de>

	* src/file-manager/fm-list-view.c (fm_list_view_clear):
	Stop cell editing mode when changing directories.
	Fixes bug #143830.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-19  Martin Wehner  <martin.wehner@epost.de>
+
+	* src/file-manager/fm-list-view.c (fm_list_view_clear):
+	Stop cell editing mode when changing directories.
+	Fixes bug #143830.
+
 2004-08-17  Mark McLoughlin  <mark@skynet.ie>
 
 	* cut-n-paste-code/libegg/egg-recent-item.c: sync with latest
