Updated Albanian translation.
2004-08-20  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

--- a/po/sq.po
+++ b/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-18 04:13+0200\n"
+"POT-Creation-Date: 2004-08-19 12:12+0200\n"
 "PO-Revision-Date: 2004-08-18 00:29+0200\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
@@ -601,9 +601,10 @@ msgstr "Blu e hapur"
 msgid "Personal"
 msgstr "Personale"
 
+#. GRUT modified this item
 #: data/browser.xml.h:67
 msgid "Pictures"
-msgstr "Figura"
+msgstr "Figurat"
 
 #: data/browser.xml.h:68
 msgid "Purple Marble"
@@ -633,9 +634,10 @@ msgstr "Argjil"
 msgid "Silver"
 msgstr "Argjent"
 
+#. GRUT modified this item
 #: data/browser.xml.h:75
 msgid "Sky"
-msgstr "Qiell"
+msgstr "Qielli"
 
 #: data/browser.xml.h:76
 msgid "Sky Ridge"
@@ -1798,10 +1800,11 @@ msgstr "Grupi"
 msgid "The group of the file."
 msgstr "Grupi i file."
 
+#. GRUT modified this item
 #: libnautilus-private/nautilus-column-utilities.c:97
 #: src/file-manager/fm-properties-window.c:2928
 msgid "Permissions"
-msgstr "Të drejtat"
+msgstr "Autorizimet"
 
 #: libnautilus-private/nautilus-column-utilities.c:98
 msgid "The permissions of the file."
@@ -1865,10 +1868,11 @@ msgstr "_Lidhe këtu"
 msgid "Set as _Background"
 msgstr "Vendose si _sfond"
 
+#. GRUT modified this item
 #: libnautilus-private/nautilus-dnd.c:639
 #: libnautilus-private/nautilus-dnd.c:694
 msgid "Cancel"
-msgstr "Anulloje"
+msgstr "Anullo"
 
 #: libnautilus-private/nautilus-dnd.c:680
 msgid "Set as background for _all folders"
@@ -2804,17 +2808,17 @@ msgstr "Nëse zbrazni koshin, elementët do të eleminohen përgjithmonë."
 msgid "_Empty"
 msgstr "_Zbraz"
 
-#: libnautilus-private/nautilus-file-operations-progress.c:395
+#: libnautilus-private/nautilus-file-operations-progress.c:402
 #, c-format
 msgid "(%d:%02d:%d Remaining)"
 msgstr "(%d:%02d:%d Mbeten)"
 
-#: libnautilus-private/nautilus-file-operations-progress.c:400
+#: libnautilus-private/nautilus-file-operations-progress.c:407
 #, c-format
 msgid "(%d:%02d Remaining)"
 msgstr "(%d:%02d Mbeten)"
 
-#: libnautilus-private/nautilus-file-operations-progress.c:513
+#: libnautilus-private/nautilus-file-operations-progress.c:520
 #, c-format
 msgid "%ld of %ld"
 msgstr "%ld nga %ld"
@@ -3107,17 +3111,19 @@ msgstr "Teksti i mbajtësit"
 msgid "Draw a frame around unselected text"
 msgstr "Vizato një përmbajtës rreth tekstit të pazgjedhur"
 
+#. GRUT modified this item
 #: libnautilus-private/nautilus-icon-container.c:4209
 msgid "Selection Box Color"
-msgstr "Kutia e zgjedhjes së ngjyrave"
+msgstr "Ngjyra e kutisë së zgjedhjes"
 
 #: libnautilus-private/nautilus-icon-container.c:4210
 msgid "Color of the selection box"
 msgstr "Ngjyra e kutisë zgjedhëse"
 
+#. GRUT modified this item
 #: libnautilus-private/nautilus-icon-container.c:4215
 msgid "Selection Box Alpha"
-msgstr "Alpha e kutisë së zgjedhëse"
+msgstr "Alpha e kutisë së zgjedhjes"
 
 #: libnautilus-private/nautilus-icon-container.c:4216
 msgid "Opacity of the selection box"
@@ -4444,12 +4450,12 @@ msgstr "Gabim gjatë \"Kap e Zvarrit\""
 msgid "An invalid drag type was used."
 msgstr "Është përdorur një lloj kapjeje e pavlefshme."
 
-#: src/file-manager/fm-list-view.c:1524
+#: src/file-manager/fm-list-view.c:1536
 #, c-format
 msgid "%s Visible Columns"
 msgstr "%s kollona të dukshme"
 
-#: src/file-manager/fm-list-view.c:1543
+#: src/file-manager/fm-list-view.c:1555
 msgid "Choose the order of information to appear in this folder."
 msgstr "Zgjidh rradhën e shfaqjes së informacione në këtë kartelë."
 
@@ -4647,9 +4653,10 @@ msgstr "Special flags:"
 msgid "Set gro_up ID"
 msgstr "Përcakto ID e gr_upit"
 
+#. GRUT modified this item
 #: src/file-manager/fm-properties-window.c:2839
 msgid "_Sticky"
-msgstr "_Sticky"
+msgstr "_Ngjitës"
 
 #: src/file-manager/fm-properties-window.c:2938
 msgid "You are not the owner, so you can't change these permissions."
@@ -5110,9 +5117,10 @@ msgstr "Aktivo/ç'aktivo vendosjen e ngjeshur"
 msgid "_Keep Aligned"
 msgstr "_Mbaji të Rreshtuara"
 
+#. GRUT modified this item
 #: src/file-manager/nautilus-icon-view-ui.xml.h:25
 msgid "_Manually"
-msgstr "_Sipas dëshirës"
+msgstr "_Me dorë"
 
 #: src/file-manager/nautilus-list-view-ui.xml.h:1
 msgid "Select the columns visible in this folder"
@@ -5355,9 +5363,10 @@ msgstr "_Porta:"
 msgid "_Folder:"
 msgstr "_Kartela:"
 
+#. GRUT modified this item
 #: src/nautilus-connect-server-dialog.c:516
 msgid "_User Name:"
-msgstr "_Emri i përdoruesit:"
+msgstr "Emri i _përdoruesit:"
 
 #: src/nautilus-connect-server-dialog.c:543
 msgid "_Name to use for connection:"
@@ -5649,9 +5658,10 @@ msgstr "Informal"
 msgid "iso"
 msgstr "iso"
 
+#. GRUT modified this item
 #: src/nautilus-file-management-properties.glade.h:85
 msgid "locale"
-msgstr "locale"
+msgstr "lokale"
 
 #: src/nautilus-file-management-properties.glade.h:86
 msgid "none"
@@ -5995,9 +6005,10 @@ msgstr "Kërko për files në këtë kompjuter"
 msgid "St_atusbar"
 msgstr "Paneli i gj_endjes"
 
+#. GRUT modified this item
 #: src/nautilus-navigation-window-ui.xml.h:25
 msgid "Stop"
-msgstr "Ndalo"
+msgstr "Ndal"
 
 #: src/nautilus-navigation-window-ui.xml.h:26
 msgid "Up"
@@ -6273,9 +6284,10 @@ msgstr "_Hiq një emblemë..."
 msgid "Factory for Nautilus shell and file manager"
 msgstr "Fabrikë për shell dhe organizuesin e file Nautilus"
 
+#. GRUT modified this item
 #: src/Nautilus_shell.server.in.h:2
 msgid "Icons"
-msgstr "Ikona"
+msgstr "Ikonat"
 
 #: src/Nautilus_shell.server.in.h:3
 msgid "Icons Viewer"
@@ -6790,3 +6802,4 @@ msgstr "Rrjeti i Server-ve"
 #: src/network-scheme.desktop.in.h:2
 msgid "View your network servers in the Nautilus file manager"
 msgstr "Shiko rrjetin tuaj të server-ve tek organizuesi i file Nautilus"
+
