--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-21  Leonid Kanter <leon@asplinux.ru>
+
+	* ru.po: Updated Russian translation
+
 2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Update
