--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-22  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-08-21  Changwoo Ryu  <cwryu@debian.org>
 
 	* ko.po: Updated Korean translation.
