--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-23  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-08-23  Alexander Shopov  <ash@contact.bg>
 
 	* bg.po: Updated Bulgarian translation by
