--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-17  Dennis Cranston <dennis_cranston at yahoo com>
+ 
+	* src/nautilus-connect-server-dialog.c:
+	HIGify widget padding.
+	
 2004-08-23  Alexander Larsson  <alexl@redhat.com>
 
 	* libnautilus-private/nautilus-file.c: (get_description):
@@ -14,7 +19,6 @@
 	of the short list (which is essentially random).
 	Remove component picking for non-folders.
 	Remove unused code.
-	
 
 2004-08-19  Martin Wehner  <martin.wehner@epost.de>
 
