--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -11,13 +11,13 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-16 16:53+0200\n"
-"PO-Revision-Date: 2004-07-24 17:33-0300\n"
+"PO-Revision-Date: 2004-08-23 18:58-0300\n"
 "Last-Translator: Raphael Higino <raphaelh@uai.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: components/adapter/main.c:101
 msgid "bonobo_ui_init() failed."
@@ -1183,9 +1183,8 @@ msgid "Default zoom level used by the list view."
 msgstr "Nível de zoom padrão usado pela visão de lista."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:24
-#, fuzzy
 msgid "Desktop computer icon name"
-msgstr "Nome do ícone da pasta pessoal"
+msgstr "Nome do ícone do Computador na área de trabalho"
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:25
 msgid "Desktop font"
@@ -1611,13 +1610,10 @@ msgid "The side pane view to show in newly opened windows."
 msgstr "A visualização do painel lateral para novas janelas."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:88
-#, fuzzy
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
-msgstr ""
-"Esse nome pode ser definido se você quiser um nome personalizado para o "
-"ícone do Diretório Pessoal (home) da área de trabalho."
+msgstr "Esse nome pode ser definido se você quiser um nome personalizado para o ícone do Computador na área de trabalho."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -2835,9 +2831,8 @@ msgid "Themes"
 msgstr "Temas"
 
 #: libnautilus-private/nautilus-file-utilities.c:377
-#, fuzzy
 msgid "CD/DVD Creator"
-msgstr "Criador de CDs"
+msgstr "Criador de CD/DVD"
 
 #: libnautilus-private/nautilus-file-utilities.c:379
 msgid "Windows Network"
@@ -3656,13 +3651,12 @@ msgid "Browse the filesystem with the file manager"
 msgstr "Navega no sistema de arquivos com o gerenciador de arquivos"
 
 #: nautilus.desktop.in.h:2
-#, fuzzy
 msgid "File Browser"
-msgstr "Gerenciador de Arquivos: %s"
+msgstr "Navegador de Arquivos"
 
 #: nautilus-file-management-properties.desktop.in.h:1
 msgid "Change how files are managed"
-msgstr "Altera o gerenciamento dos arquivos"
+msgstr "Altere o gerenciamento dos arquivos"
 
 #: nautilus-file-management-properties.desktop.in.h:2
 msgid "File Management"
@@ -4903,9 +4897,8 @@ msgid "No templates Installed"
 msgstr "Não há modelos instalados"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:28
-#, fuzzy
 msgid "Open Wit_h"
-msgstr "Abrir Com"
+msgstr "Abrir _Com"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:29
 msgid "Open each selected item in a navigation window"
@@ -4920,9 +4913,8 @@ msgid "Open the selected item in this window"
 msgstr "Abre o item selecionado nesta janela"
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:32
-#, fuzzy
 msgid "Open with Other _Application..."
-msgstr "Abrir com Outra Aplicação"
+msgstr "Abrir com Outra _Aplicação..."
 
 #: src/file-manager/nautilus-directory-view-ui.xml.h:33
 msgid "Prepare the selected files to be copied with a Paste Files command"
@@ -5335,87 +5327,76 @@ msgid "%s on %s"
 msgstr "%s em %s"
 
 #: src/nautilus-connect-server-dialog.c:380
-#, fuzzy
 msgid "_Location (URI):"
-msgstr "_Localização (URL):"
+msgstr "_Localização (URI):"
 
 #: src/nautilus-connect-server-dialog.c:424
-#, fuzzy
 msgid "_Server:"
-msgstr "_Nunca"
+msgstr "_Servidor:"
 
 #: src/nautilus-connect-server-dialog.c:443
-#, fuzzy
 msgid "Optional information:"
-msgstr "Informação"
+msgstr "Informações opcionais:"
 
 #: src/nautilus-connect-server-dialog.c:455
-#, fuzzy
 msgid "_Share:"
-msgstr "Shale"
+msgstr "_Compartilhamento:"
 
 #: src/nautilus-connect-server-dialog.c:476
-#, fuzzy
 msgid "_Port:"
-msgstr "_Formato:"
+msgstr "_Porta:"
 
 #: src/nautilus-connect-server-dialog.c:496
-#, fuzzy
 msgid "_Folder:"
-msgstr "Recor_tar Pasta"
+msgstr "_Pasta:"
 
 #: src/nautilus-connect-server-dialog.c:516
-#, fuzzy
 msgid "_User Name:"
-msgstr "_Nome:"
+msgstr "Nome do _Usuário:"
 
 #: src/nautilus-connect-server-dialog.c:543
 msgid "_Name to use for connection:"
-msgstr ""
+msgstr "_Nome para usar para a conexão:"
 
 #: src/nautilus-connect-server-dialog.c:600
 msgid "Connect to Server"
 msgstr "Conectar ao Servidor"
 
 #: src/nautilus-connect-server-dialog.c:612
-#, fuzzy
 msgid "Service _type:"
-msgstr "Entrada de serviços"
+msgstr "_Tipo de serviço:"
 
 #: src/nautilus-connect-server-dialog.c:621
 msgid "SSH"
-msgstr ""
+msgstr "SSH"
 
 #: src/nautilus-connect-server-dialog.c:623
 msgid "Public FTP"
-msgstr ""
+msgstr "FTP público"
 
 #: src/nautilus-connect-server-dialog.c:625
 msgid "FTP (with login)"
-msgstr ""
+msgstr "FTP (com login)"
 
 #: src/nautilus-connect-server-dialog.c:627
-#, fuzzy
 msgid "Windows share"
-msgstr "Rede Windows"
+msgstr "Compartilhamento do Windows"
 
 #: src/nautilus-connect-server-dialog.c:629
 msgid "WebDAV (HTTP)"
-msgstr ""
+msgstr "WebDAV (HTTP)"
 
 #: src/nautilus-connect-server-dialog.c:631
 msgid "Secure WebDAV (HTTPS)"
-msgstr ""
+msgstr "WebDAV seguro (HTTPS)"
 
 #: src/nautilus-connect-server-dialog.c:633
-#, fuzzy
 msgid "Custom Location"
-msgstr "Localização:"
+msgstr "Localização Personalizada"
 
 #: src/nautilus-connect-server-dialog.c:684
-#, fuzzy
 msgid "Browse _Network"
-msgstr "Rede Windows"
+msgstr "Navegar na _Rede"
 
 #: src/nautilus-connect-server-dialog.c:690
 msgid "C_onnect"
@@ -5968,9 +5949,8 @@ msgstr "Vai para a pasta de modelos"
 
 #: src/nautilus-navigation-window-ui.xml.h:16
 #: src/nautilus-spatial-window-ui.xml.h:9
-#, fuzzy
 msgid "Go to the CD/DVD Creator"
-msgstr "Vai para o Criador de CD"
+msgstr "Vai para o Criador de CD/DVD"
 
 #: src/nautilus-navigation-window-ui.xml.h:17
 msgid "Go to the next visited location"
@@ -6500,9 +6480,8 @@ msgid "_Backgrounds and Emblems..."
 msgstr "Planos de Fundo e Em_blemas..."
 
 #: src/nautilus-shell-ui.xml.h:30
-#, fuzzy
 msgid "_CD/DVD Creator"
-msgstr "Criador de _CD"
+msgstr "Criador de _CD/DVD"
 
 #: src/nautilus-shell-ui.xml.h:31
 msgid "_Close"
