remove libnautilus-private/nautilus-program-chooser.c Updated Lithuanian
2004-08-26  Gediminas Paulauskas <menesis@chatsubo.lt>

	* POTFILES.in: remove libnautilus-private/nautilus-program-chooser.c
	* lt.po: Updated Lithuanian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-26  Gediminas Paulauskas <menesis@chatsubo.lt>
+
+	* POTFILES.in: remove libnautilus-private/nautilus-program-chooser.c
+	* lt.po: Updated Lithuanian translation.
+	
 2004-08-25  Maxim Dziumanenko <mvd@mylinux.com.ua>
 
 	* uk.po: Updated Ukrainian translation.
