Make nautilus_file_is_mime_type handle inherited types too. Make
2004-08-26  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c:
	Make nautilus_file_is_mime_type handle inherited types too.
	Make nautilus_file_contains_text work again.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-08-26  Alexander Larsson  <alexl@redhat.com>
+
+	* libnautilus-private/nautilus-file.c:
+	Make nautilus_file_is_mime_type handle inherited types too.
+	Make nautilus_file_contains_text work again.
+
 2004-08-17  Dennis Cranston <dennis_cranston at yahoo com>
  
 	* src/nautilus-connect-server-dialog.c:
