--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-26  Nikos Charonitakis  <charosn@her.forthnet.gr>
+
+	* el.po: Updated Greek translation.
+
 2004-08-26  Gediminas Paulauskas <menesis@chatsubo.lt>
 
 	* POTFILES.in: remove libnautilus-private/nautilus-program-chooser.c
