--- a/po/es.po
+++ b/po/es.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-16 21:41+0200\n"
-"PO-Revision-Date: 2004-08-16 21:45+0200\n"
+"PO-Revision-Date: 2004-08-28 17:06+0200\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -4692,7 +4692,7 @@ msgstr "El nombre «%s» no es válido. Por favor use un nombre distinto."
 msgid "Couldn't change the name of \"%s\" because it is on a read-only disk"
 msgstr ""
 "No se ha podido cambiar el nombre de «%s» porque está en un disco de sólo "
-"lectura."
+"lectura"
 
 # src/file-manager/fm-error-reporting.c:64
 #: src/file-manager/fm-error-reporting.c:137
@@ -6358,7 +6358,7 @@ msgstr "Realiza un conjunto rápido de auto-verificaciones."
 
 #: src/nautilus-main.c:191
 msgid "Create the initial window with the given geometry."
-msgstr "Crea la ventana inicial con la geometría indicada"
+msgstr "Crea la ventana inicial con la geometría indicada."
 
 #: src/nautilus-main.c:191
 msgid "GEOMETRY"
@@ -6823,7 +6823,7 @@ msgstr "No se ha podido instalar el patrón"
 
 #: src/nautilus-property-browser.c:1111
 msgid "Sorry, but you can't replace the reset image."
-msgstr "Lo siento, pero usted no puede cambiar la imagen de reinicio"
+msgstr "Lo siento, pero usted no puede cambiar la imagen de reinicio."
 
 #: src/nautilus-property-browser.c:1112
 msgid "Reset is a special image that cannot be deleted."
