Updated Malay translation.
2004-08-29  Hasbullah Bin Pit  <sebol@my-penguin.org>

        * ms.po: Updated Malay translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-29  Hasbullah Bin Pit  <sebol@my-penguin.org>
+
+	* ms.po: Updated Malay translation.
+
 2004-08-28  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
