--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-30  Martin Willemoes Hansen  <mwh@sysrq.dk>
+
+	* da.po: Updated Danish translation.
+
 2004-08-29  Hasbullah Bin Pit  <sebol@my-penguin.org>
 
 	* ms.po: Updated Malay translation.
