--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-30  Alexander Larsson  <alexl@redhat.com>
+
+	* NEWS:
+	Update for 2.7.92
+
+	* configure.in:
+	Require new eel
+
 2004-08-27  Narayana Pattipati  <narayana.pattipati@wipro.com>
 
 	* libnautilus-private/nautilus-file.c
