--- a/po/ca.po
+++ b/po/ca.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus 2.7.4\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 12:44+0200\n"
+"POT-Creation-Date: 2004-08-30 16:44+0200\n"
 "PO-Revision-Date: 2004-08-30 12:56+0200\n"
 "Last-Translator: Jordi Mallach <jordi@sindominio.net>\n"
 "Language-Team: Catalan <tradgnome@softcatala.org>\n"
@@ -1604,7 +1604,9 @@ msgstr ""
 msgid ""
 "The format of file dates. Possible values are \"locale\", \"iso\", and "
 "\"informal\"."
-msgstr "El format de les dates dels fitxers. Els valors possibles són «locale», «iso» i «informal»."
+msgstr ""
+"El format de les dates dels fitxers. Els valors possibles són «locale», "
+"«iso» i «informal»."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:87
 msgid "The side pane view to show in newly opened windows."
@@ -1614,7 +1616,9 @@ msgstr "La vista de barra lateral a mostrar a les noves finestres."
 msgid ""
 "This name can be set if you want a custom name for the computer icon on the "
 "desktop."
-msgstr "Aquest nom es pot establir si voleu un nom personalitzat per a la icona «Ordinador» de l'escriptori."
+msgstr ""
+"Aquest nom es pot establir si voleu un nom personalitzat per a la icona "
+"«Ordinador» de l'escriptori."
 
 #: libnautilus-private/apps_nautilus_preferences.schemas.in.h:89
 msgid ""
@@ -2406,7 +2410,9 @@ msgstr "El fitxer «%s» ja existeix. Voleu reemplaçar-lo?"
 msgid ""
 "If you replace the existing folder, any files in it that conflicts with the "
 "files being copied will be overwritten."
-msgstr "Si reemplaceu la carpeta existent, qualsevol fitxer en ella que facen conflicte amb els fitxer que es copiaran seran sobreescrits."
+msgstr ""
+"Si reemplaceu la carpeta existent, qualsevol fitxer en ella que facen "
+"conflicte amb els fitxer que es copiaran seran sobreescrits."
 
 #: libnautilus-private/nautilus-file-operations.c:1103
 msgid "If you replace an existing file, its contents will be overwritten."
