--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-31  Åsmund Skjæveland <aasmunds@fys.uio.no>
+
+	* nn.po: Updated Norwegian Nynorsk translation.
+
 2004-08-30  Jordi Mallach  <jordi@sindominio.net>
 
 	* ca.po: Updated Catalan translation.
