--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,6 @@
+2004-09-02  Runa Bhattacharjee  <runab@redhat.com>
+	* bn.po: Updated Bengali(bn) Translation.
+
 2004-08-31  Åsmund Skjæveland <aasmunds@fys.uio.no>
 
 	* nn.po: Updated Norwegian Nynorsk translation.
