correct patch author

--- a/ChangeLog
+++ b/ChangeLog
@@ -25,7 +25,7 @@
 
 	* libnautilus-private/nautilus-file.c (nautilus_get_group_names_including):
 	Faster way to get list of groups.
-	Patch from Martin Hunt (hunt@redhat.com)
+	Patch from Dave Lehman (dlehman@redhat.com)
 
 2004-08-27  Alexander Larsson  <alexl@redhat.com>
 
