Updated Italian translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-02  Alessio Frusciante  <algol@firenze.linux.it>
+
+	* it.po: Updated Italiant translation by
+	Luca Ferretti <elle.uca@infinito.it>.
+
 2004-09-02  Runa Bhattacharjee  <runab@redhat.com>
 	* bn.po: Updated Bengali(bn) Translation.
 
